Creation CustomerController.java

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,3 +1,4 @@
+server.port=8090
 # Postgres
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:online-business}
 spring.datasource.username=${POSTGRES_USER:compose-postgres}
