--- a/core/pom.xml
+++ b/core/pom.xml
@@ -28,6 +28,12 @@
             <artifactId>modelmapper</artifactId>
             <version>${modelMapper.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+        </dependency>
+
         <dependency>
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
