Unit test repository creation

--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 server.port=8090
 # Postgres
 spring.datasource.url=jdbc:postgresql://${DB_HOST:localhost}:${DB_PORT:5432}/${DB_NAME:online-business}
-spring.datasource.username=${POSTGRES_USER:postgres}
-spring.datasource.password=${POSTGRES_USER_PASSWORD:postgres}
+spring.datasource.username=${POSTGRES_USER:compose-postgres}
+spring.datasource.password=${POSTGRES_USER_PASSWORD:compose-postgres}
 spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.open-in-view=false
 
